--- a/mtcsound/src/main/res/layout/fragment_settings.xml
+++ b/mtcsound/src/main/res/layout/fragment_settings.xml
@@ -237,11 +237,12 @@
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <TableRow>
+            <TableRow android:layout_marginTop="@dimen/checkbox_top_margin">
                 <CheckBox
                     style="@style/medium_label"
                     android:id="@+id/setup_phone_fl"
-                    android:padding="@dimen/radio_padding"
+                    android:paddingStart="@dimen/radio_padding"
+                    android:paddingEnd="@dimen/radio_padding"
                     android:button="@null"
                     android:drawableTop="@drawable/radiobutton"
                     android:layout_width="wrap_content"
@@ -249,7 +250,8 @@
                 <CheckBox
                     style="@style/medium_label"
                     android:id="@+id/setup_phone_fr"
-                    android:padding="@dimen/radio_padding"
+                    android:paddingStart="@dimen/radio_padding"
+                    android:paddingEnd="@dimen/radio_padding"
                     android:button="@null"
                     android:drawableTop="@drawable/radiobutton"
                     android:layout_width="wrap_content"
@@ -259,7 +261,8 @@
                 <CheckBox
                     style="@style/medium_label"
                     android:id="@+id/setup_phone_rl"
-                    android:padding="@dimen/radio_padding"
+                    android:paddingStart="@dimen/radio_padding"
+                    android:paddingEnd="@dimen/radio_padding"
                     android:button="@null"
                     android:drawableTop="@drawable/radiobutton"
                     android:layout_width="wrap_content"
@@ -267,7 +270,8 @@
                 <CheckBox
                     style="@style/medium_label"
                     android:id="@+id/setup_phone_rr"
-                    android:padding="@dimen/radio_padding"
+                    android:paddingStart="@dimen/radio_padding"
+                    android:paddingEnd="@dimen/radio_padding"
                     android:button="@null"
                     android:drawableTop="@drawable/radiobutton"
                     android:layout_width="wrap_content"
@@ -275,6 +279,14 @@
             </TableRow>
         </TableLayout>
         <TextView style="@style/large_label" android:layout_marginTop="@dimen/setup_header_margin" android:text="@string/setup_other"/>
+        <CheckBox
+            style="@style/medium_label"
+            android:id="@+id/setup_altgsm"
+            android:layout_marginTop="@dimen/checkbox_top_margin"
+            android:button="@null"
+            android:drawableTop="@drawable/radiobutton"
+            android:layout_width="wrap_content"
+            android:text="@string/setup_button_altgsm" />
         <CheckBox
             style="@style/medium_label"
             android:id="@+id/setup_altnavi"
